--- a/bericht/thesis.tex
+++ b/bericht/thesis.tex
@@ -243,7 +243,7 @@ Transportschäden - Häufigkeit: mittel; Schaden: mittel
 \caption{Risikomatrix}
 \label{risikoMatrix}
 \centering
-\includegraphics[scale=1.0]{images/risikoanalyse.png}
+\includegraphics[scale=1.0]{pictures/risikoanalyse.png}
 \end{figure} 
 
 
@@ -551,7 +551,7 @@ Im laufe der Analyse der Websites stellte sich heraus das es drei Fälle zu Bele
 \caption{Hessische Landesseite (Verordnung als PDF verlinkt)}
 \label{websiteHessen}
 \centering
-\includegraphics[scale=0.9]{images/hessenOverview.png}
+\includegraphics[scale=0.9]{pictures/hessenOverview.png}
 \end{figure} 
 
 Seltener wurde die gültige Verordnung oder zusammengefasste Informationen als reiner Text in den HTML-Code integriert:
@@ -560,7 +560,7 @@ Seltener wurde die gültige Verordnung oder zusammengefasste Informationen als r
 \caption{Berliner Landesseite (Verordnung im HTML Code)}
 \label{websiteBerlin}
 \centering
-\includegraphics[scale=0.8]{images/berlinOverview.png}
+\includegraphics[scale=0.8]{pictures/berlinOverview.png}
 \end{figure} 
 
 Und letzteres wurden zusammengefasste Informationen als Überblick in einer Bildergalerie präsentiert:
@@ -569,7 +569,7 @@ Und letzteres wurden zusammengefasste Informationen als Überblick in einer Bild
 \caption{Nordrhein-Westfalens Landesseite (Informationen als Bilder Galerie)}
 \label{websiteNRW}
 \centering
-\includegraphics[scale=0.8]{images/nrwOverview.png}
+\includegraphics[scale=0.8]{pictures/nrwOverview.png}
 \end{figure} 
 
 \section{Wetterdaten}
