changed format of picture

--- a/bericht/thesis.tex
+++ b/bericht/thesis.tex
@@ -222,13 +222,13 @@ Wir haben folgende Risiken erfasst:
 \item Ausfall von Hardwareteilen
 Da wir bei unserer Hardware auf unsere privaten ehemaligen genutzten Rechner setzen und damit auf heterogene Systeme und keine wirklichen Servern ist durchaus davon auszugehen das der ein oder andere Ausfall der Hardwareteile während des Projekts möglich ist. Das führt je nach schwere des Schadens bis zu einem Ausfall eines Nodes.
 \item Ausfall ganzer Nodes
-Da wir wie bereits erwähnt auf unterschiedliche Hardware setzten und hierbei bereits ein Risiko besteht es könnte ein schwerwiegenden Ausfall geben kommt aber auch noch hinzu das anderweitig z.B. durch falsche Konfiguration ein Ausfall entstehen kann. 
+Da wir wie bereits erwähnt auf unterschiedliche Hardware setzten und hierbei bereits ein Risiko besteht es könnte ein schwerwiegenden Ausfall geben kommt aber auch noch hinzu das anderweitig z.B. durch falsche Konfiguration ein Ausfall entstehen kann.
 \item Inkompatibilität von Python Versionen zwischen Windows und Ubuntu
 Wir führen alle unsere Entwicklungen auf Windows durch und für die Server setzen wir auf eine etwas ältere Ubuntu Version. Dadurch sehen wir es als Risiko beim späteren deployen unserer Skripte auf den Servern.
 \item Inkompatibilität von Frameworks zueinander
 Für das Scheduling, das Dateisystem etc. setzen wir auf viele verschiedene Frameworks die alle Hand in Hand gehen müssen. Da sehen wir ein direktes Risiko von Inkompatibiltät
 \item Schaden an der Festplatte durch Transport
-Dadurch das die Rechner nicht fest bei einem Projektmitglied oder festgelegtem Ort während der Entwicklung standen und des öfteren zwischen einander 
+Dadurch das die Rechner nicht fest bei einem Projektmitglied oder festgelegtem Ort während der Entwicklung standen und des öfteren zwischen einander
 transportiert wurden war die Unversehrtheit des Systems sowie vor allem der HDDs ein Risiko. Die Rechner sollten erst im späteren Verlauf in der FHWS eingesetzt werden.
 \end{itemize}
 \subsection{Risikobewertung}
@@ -244,7 +244,7 @@ Transportschäden - Häufigkeit: mittel; Schaden: mittel
 \label{risikoMatrix}
 \centering
 \includegraphics[scale=1.0]{pictures/risikoanalyse.png}
-\end{figure} 
+\end{figure}
 
 
 \chapter{Cluster}
@@ -547,30 +547,30 @@ Für die Daten der gültigen Maßnahmen und Verordnungen wird direkt auf die off
 \end{itemize}
 
 Im laufe der Analyse der Websites stellte sich heraus das es drei Fälle zu Beleuchten gab. Zum einen wurde oft auf den Websites mehr schlecht als recht über die aktuellen Corona-Maßnahmen informiert und nur auf das aktuell gültige Rechtsdokument wie eine Corona-Verordnung verwiesen welches meistens als PDF-Datei publik gemacht wurde:
-\begin{figure}[h!]
+\begin{figure}[H]
 \caption{Hessische Landesseite (Verordnung als PDF verlinkt)}
 \label{websiteHessen}
 \centering
 \includegraphics[scale=0.9]{pictures/hessenOverview.png}
-\end{figure} 
+\end{figure}
 
 Seltener wurde die gültige Verordnung oder zusammengefasste Informationen als reiner Text in den HTML-Code integriert:
 
-\begin{figure}[h!]
+\begin{figure}[H]
 \caption{Berliner Landesseite (Verordnung im HTML Code)}
 \label{websiteBerlin}
 \centering
 \includegraphics[scale=0.8]{pictures/berlinOverview.png}
-\end{figure} 
+\end{figure}
 
 Und letzteres wurden zusammengefasste Informationen als Überblick in einer Bildergalerie präsentiert:
 
-\begin{figure}[h!]
+\begin{figure}[H]
 \caption{Nordrhein-Westfalens Landesseite (Informationen als Bilder Galerie)}
 \label{websiteNRW}
 \centering
 \includegraphics[scale=0.8]{pictures/nrwOverview.png}
-\end{figure} 
+\end{figure}
 
 \section{Wetterdaten}
 Die Wetterdaten sind grunds\"atzlich die einfachste Datenquelle. Hier gibt es mehrere verschiedene APIs die Wetterdaten zur Verfügung stellen, die Schwierigkeit ist nur eine API zu finden die diese Informationen ohne Kosten freigeben.
